test_regress/t/t_covergroup_coverpoints_unsup.out
%Warning-COVERIGN: t/t_covergroup_coverpoints_unsup.v:21:19: Ignoring unsupported: coverage clocking event
   21 |     covergroup cg @(posedge clk);
      |                   ^
                   ... For warning description see https://verilator.org/warn/COVERIGN?v=latest
                   ... Use "/* verilator lint_off COVERIGN */" and lint_on around source to disable this message.
%Error: t/t_covergroup_coverpoints_unsup.v:35:48: Member 'a' not found in covergroup 'cg'
                                                : ... note: In instance 't'
   35 |             $display("coverage a = %f", the_cg.a.get_inst_coverage());
      |                                                ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error-UNSUPPORTED: t/t_covergroup_coverpoints_unsup.v:35:50: Unsupported: Member call on object 'CONST '1'h0'' which is a 'BASICDTYPE 'logic''
                                                            : ... note: In instance 't'
   35 |             $display("coverage a = %f", the_cg.a.get_inst_coverage());
      |                                                  ^~~~~~~~~~~~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: t/t_covergroup_coverpoints_unsup.v:36:48: Member 'b' not found in covergroup 'cg'
                                                : ... note: In instance 't'
   36 |             $display("coverage b = %f", the_cg.b.get_inst_coverage());
      |                                                ^
%Error-UNSUPPORTED: t/t_covergroup_coverpoints_unsup.v:36:50: Unsupported: Member call on object 'CONST '1'h0'' which is a 'BASICDTYPE 'logic''
                                                            : ... note: In instance 't'
   36 |             $display("coverage b = %f", the_cg.b.get_inst_coverage());
      |                                                  ^~~~~~~~~~~~~~~~~
%Error: t/t_covergroup_coverpoints_unsup.v:37:24: Member 'a' not found in covergroup 'cg'
                                                : ... note: In instance 't'
   37 |             if (the_cg.a.get_inst_coverage() != 15/16.0) $stop();
      |                        ^
%Error-UNSUPPORTED: t/t_covergroup_coverpoints_unsup.v:37:26: Unsupported: Member call on object 'CONST '1'h0'' which is a 'BASICDTYPE 'logic''
                                                            : ... note: In instance 't'
   37 |             if (the_cg.a.get_inst_coverage() != 15/16.0) $stop();
      |                          ^~~~~~~~~~~~~~~~~
%Error: t/t_covergroup_coverpoints_unsup.v:38:24: Member 'b' not found in covergroup 'cg'
                                                : ... note: In instance 't'
   38 |             if (the_cg.b.get_inst_coverage() != 4/5.0) $stop();
      |                        ^
%Error-UNSUPPORTED: t/t_covergroup_coverpoints_unsup.v:38:26: Unsupported: Member call on object 'CONST '1'h0'' which is a 'BASICDTYPE 'logic''
                                                            : ... note: In instance 't'
   38 |             if (the_cg.b.get_inst_coverage() != 4/5.0) $stop();
      |                          ^~~~~~~~~~~~~~~~~
%Error: Exiting due to
